-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0
-
None
-
Windows 7
-
Crash fix: db68fe94a7502b92887d55a2bdb1741a2ec8f492 (qtactiveqt/5.4, 26.1.2015, 5.4.2) b178617528dd8e897dfcd56310d67515087e684b (qtactiveqt/5.5, 20.3.2015, 5.5):
In some controls there are functions in the generated code from dumpcpp that take an IDispatch** parameter. Currently it is not possible to invoke those. For example:
IdentifyObjectAt(int xParam, int yParam, IDispatch** identifiedObjectParam, VcObjectTypeEnum& identifiedObjectTypeParam)
will not work because it will crash no matter how you try to pass a parameter to it.
Steps to reproduce
- Install http://info.netronic.com/free-download-gantt-control-for-net-activex-aspnet
- Build Qt 5/32bit
- Run example
- relates to
-
QTBUG-26587 ActiveQt: TYPELIBS qmake variable doesn't produce correct files
-
- Closed
-
For Gerrit Dashboard: QTBUG-44048 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
104447,2 | Fix handling of unsupported out parameters in QVariantToVARIANT(). | 5.4 | qt/qtactiveqt | Status: MERGED | +2 | 0 |
104788,3 | Clean up code dealing with VARIANT. | dev | qt/qtactiveqt | Status: MERGED | +2 | 0 |
104789,3 | Handle IDispatch** out parameters. | dev | qt/qtactiveqt | Status: ABANDONED | +1 | 0 |
106412,3 | Handle IDispatch** out parameters. | 5.5 | qt/qtactiveqt | Status: MERGED | +2 | 0 |