Fix handling of unsupported out parameters in  QVariantToVARIANT().

Clear the VARIANT and Bail out before performing any actions on
the parameters.

Task-number: QTBUG-44048
Change-Id: Id382ba7dc8a3a0cda1a2d7a20b1ffb59152e95fa
Reviewed-by: Andy Shaw <andy.shaw@digia.com>